--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 .DS_Store
+.svn
+svn-prop.tmp~
+.DS_Store
+.bowerrc
+
+OldWebConfig.pm
+
 webui.cgi/GD.pm
 webui.cgi/BLOSUM62
-OldWebConfig.pm
 webui.cgi/api/
 webui.cgi/bin/
 webui.cgi/main-*
@@ -9,7 +15,7 @@ webui.cgi/misc/
 webui.cgi/mpillay/
 webui.cgi/util/
 webui.cgi/psu_diagram/
-.svn/
+
 WebFarm/
 bc/
 doc.src-abc/
@@ -36,11 +42,28 @@ webui.htd-metag/
 webui.htd-proportal/
 webui.htd/
 worker.cgi/
-node_modules/
-log/
-tmp/
 MANIFEST*
-src/
-share/
-docs/
 cover_db/
+
+# proportal specific stuff:
+MANIFEST
+MANIFEST.SKIP
+Makefile.PL
+
+environments/core.json
+environments/sg_dev.json
+
+docs/
+log/
+node_modules/
+public/assets/
+public/bower/
+src/bower/
+share/
+tmp/
+IMG_Core-full/
+IMG_SG_Dev-as-core/
+lib/PodServer.pm
+script/podserver
+lib/ProPortal/Model/Methods.pm
+
