Adding taxon details page

--- a/proportal/apache/sample_server.conf
+++ b/proportal/apache/sample_server.conf
@@ -116,9 +116,6 @@ RewriteCond %{QUERY_STRING} ^$
 RewriteCond %{REQUEST_METHOD} =GET
 RewriteRule ^ ${proportal_server} [L,P]
 
-# taxon details
-RewriteRule ^//?taxon/(\d+)$ /cgi-bin/main.cgi?section=TaxonDetail&page=taxonDetail&taxon_oid=$1
-
 # standard IMG stuff
 RewriteRule ^/cgi-bin/(.*) %{DOCUMENT_ROOT}/proportal/cgi-bin/$1 [L]
 
@@ -128,7 +125,7 @@ RewriteRule ^/cgi-bin/(.*) %{DOCUMENT_ROOT}/proportal/cgi-bin/$1 [L]
 
 # RewriteRule ^/node_modules/(.*) %{DOCUMENT_ROOT}/proportal/node_modules/$1 [L]
 
-RewriteRule ^/(.*).html %{DOCUMENT_ROOT}/proportal/public/$1.html [L]
+RewriteRule ^/(.*)(.s?html) %{DOCUMENT_ROOT}/proportal/public/$1$2 [L]
 #RewriteRule ^/(.*).html ${proportal_dir}public/$1.html [L]
 
 RewriteRule ^/(d3.*) ${root_dir}code/$1 [L]
