Updates to tool demos

--- a/proportal/apache/sample_server.conf
+++ b/proportal/apache/sample_server.conf
@@ -1,9 +1,10 @@
 
 # Development
 # directory where all the proportal code is held
-Define root_dir /path/to/here/
+# change `/Users/sara/` to the appropriate path for your computer
+Define root_dir /Users/sara/
 # proportal directory (within root_dir above -- in this case, the root directory is called 'webUI', not 'IMG-ProPortal')
-Define proportal_dir /path/to/here/webUI/proportal/
+Define proportal_dir /Users/sara/webUI/proportal/
 # assuming that you run the proportal code on port 5000
 Define proportal_server http://localhost:5000/
 
