--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ proportal/lib/DBIC/
 proportal/MANIFEST
 proportal/MANIFEST.SKIP
 proportal/Makefile.PL
+proportal/config.pl
 
 proportal/bin/async.psgi
 proportal/bin/stream_test.psgi
