Adding more params to the gene_list query

--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ proportal/node_modules/
 proportal/public/assets/
 proportal/public/bower/
 proportal/image-sprite/
-proportal/icomoon/
+# proportal/icomoon/
 proportal/share/
 proportal/tmp/
 proportal/IMG_Core-full/
