--- a/proportal/environments/logger.conf
+++ b/proportal/environments/logger.conf
@@ -3,7 +3,13 @@
 # file appender and output to STDOUT.
 ############################################################
 
-log4perl.rootLogger                = DEBUG, Screen
+log4perl.rootLogger                = DEBUG, Logfile, Screen
+
+log4perl.appender.Logfile          = Log::Log4perl::Appender::File
+log4perl.appender.Logfile.filename = /global/homes/a/aireland/webUI/proportal/log/proportal-log4perl.log
+log4perl.appender.Logfile.mode     = append
+log4perl.appender.Logfile.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.Logfile.layout.ConversionPattern = [%r] %F %L %c - %m%n
 
 log4perl.appender.Screen         = Log::Log4perl::Appender::Screen
 log4perl.appender.Screen.stderr  = 0
