--- a/proportal/environments/logger.conf
+++ b/proportal/environments/logger.conf
@@ -5,13 +5,14 @@
 
 log4perl.rootLogger                = DEBUG, Screen
 #log4perl.rootLogger                = DEBUG, Logfile, Screen
-
-#log4perl.appender.Logfile          = Log::Log4perl::Appender::File
-#log4perl.appender.Logfile.filename = /global/homes/a/aireland/webUI/proportal/log/proportal-log4perl.log
-#log4perl.appender.Logfile.mode     = append
-#log4perl.appender.Logfile.layout   = Log::Log4perl::Layout::PatternLayout
-#log4perl.appender.Logfile.layout.ConversionPattern = [%r] %F %L %c - %m%n
+#log4perl.rootLogger                 = DEBUG, Logfile
+log4perl.appender.Logfile          = Log::Log4perl::Appender::File
+log4perl.appender.Logfile.filename = /global/homes/a/aireland/webUI/proportal/log/proportal-log4perl.log
+log4perl.appender.Logfile.mode     = append
+log4perl.appender.Logfile.layout   = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.Logfile.layout.ConversionPattern = [%d] %M line %L %n%m%n
 
 log4perl.appender.Screen         = Log::Log4perl::Appender::Screen
 log4perl.appender.Screen.stderr  = 0
-log4perl.appender.Screen.layout  = Log::Log4perl::Layout::SimpleLayout
+log4perl.appender.Screen.layout  = Log::Log4perl::Layout::PatternLayout
+log4perl.appender.Screen.layout.ConversionPattern = [%d] %M line %L %n%m%n
