Updating to .test as .dev no longer recommended as development domain

--- a/proportal/apache/sample_server.conf
+++ b/proportal/apache/sample_server.conf
@@ -9,7 +9,7 @@ Define proportal_dir /Users/sara/webUI/proportal/
 Define proportal_server http://localhost:5000/
 
 <VirtualHost *:80>
-    ServerName img-proportal.dev
+    ServerName img-proportal.test
 	DocumentRoot ${root_dir}webUI/
 
 	ScriptAlias /cgi-bin/ ${proportal_dir}cgi-bin/
@@ -125,7 +125,7 @@ RewriteRule ^/(d3.*) ${root_dir}code/$1 [L]
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName img-galaxy.dev
+    ServerName img-galaxy.test
 
 	<Location "/">
 		# Compress all uncompressed content.
